--- a/composer.json
+++ b/composer.json
@@ -27,7 +27,7 @@
     "illuminate/support": "^10.0|^11.0"
   },
   "require-dev": {
-    "phpunit/phpunit": "^10.0",
+    "phpunit/phpunit": "^10.5",
     "orchestra/testbench": "^8.0|^9.0",
     "laravel/pint": "^1.16"
   },
@@ -43,6 +43,7 @@
   },
   "scripts": {
     "test": "vendor/bin/phpunit",
+    "testdox": "vendor/bin/phpunit --testdox",
     "pint": "vendor/bin/pint"
   },
   "minimum-stability": "stable",
